added all(?) programming languages

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body{
     background-color: #BFDBF7 !important;
+    color:black !important;
     width: 100%;
     margin: 0%;
 }
@@ -39,12 +40,57 @@ body{
 }
 
 #content{
-    margin-top: 54px;  
+    margin-top: 88px;  
+    
+}
+
+#logo-list{
+    list-style-type:none;
+    float: left;
+    padding-left: 0px !important;
+    margin: 5px 0px 0px 15px !important;
+}
+
+#logo-list > li {
+    display: inline;
+    padding-right: 5px;
+}
+
+#picture{
+    border-radius: 50%;
+}
+
+@media screen and (max-width: 820px) {
+    #picture{
+        height: 150px;
+        width: 150px;
+    }
+}
+
+.separator{
+    height: auto;
+    margin-top: 10px;
+    margin-right: 5px;
+    margin-left: 5px;
+    width: 100%;
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+    border-bottom-color: #053C5E;
 }
 
 .header{
-    font-family: 'Righteous', cursive;
     font-size: 300%;
-    color: #053C5E  ;
+    color: #053C5E;
+    font-family: 'Righteous', cursive;
 }
 
+.sub-title{
+    margin-top: 15px;
+    font-size: 150%;
+    color: #053C5E;
+    font-family: 'Righteous', cursive;
+}
+
+#programming-languages > img{
+    margin: 7px;
+}
