redirect to home component

--- a/yori-portfolio/src/app/home/home.component.html
+++ b/yori-portfolio/src/app/home/home.component.html
@@ -1,3 +1,85 @@
-<p>
-  home works!
-</p>
+<div id="upper-bar">
+    <div id="right-name">Yori Garcia Rosario - Software Engineer</div>
+    <div id="menu-link-group">
+        <div>About me</div>
+        <div>Kanji Shoubu</div>
+        <div>Attack Defend</div>
+    </div>
+    <ul id="logo-list">
+        <li>
+            <a target="_blank" href="https://github.com/Yori1">
+                <img id="github-logo" class="logo" src="./assets/images/github-logo.png">
+            </a>
+        </li>
+        <li>
+            <a target="_blank" href="https://www.linkedin.com/in/yori-garcia-rosario-b5021b135/">
+                <img id="linkedin-logo" class="logo" src="./assets/images/linkedin-logo.png">
+            </a>
+  
+        </li>
+  
+    </ul>
+  </div>
+  <div id="content" class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <div class="header">Hey, I'm Yori</div>
+            <div id="introduction">
+                <p>
+                    I'm a Dutch student at Fontys University of Applied Sciences where I'm currently studying
+                    Software
+                    Engineering and
+                    Smart Mobile.
+                </p>
+                <p>
+                    I'm very passionate about building software that the user wants, and I'm always
+                    trying to follow the newest best coding practices. I have experience making desktop
+                    applications, webapplications (both frontend and backend), mobile applications and JSON APIs.
+                </p>
+                <p>
+                    When I'm not working on software, I like playing video games, exercising or learning Japanese.
+                </p>
+            </div>
+  
+        </div>
+        <div class="col-md-3">
+            <img id="picture" src="./assets/images/picture.png" />
+        </div>
+    </div>
+    <div class="separator"></div>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="sub-title">Kanji Shoubu</div>
+            <p>
+                Kanji Shoubu is a webapp built with Spring Boot and MySQL. It's an application that allows logged in
+                users to view a list
+                of all online users, and challenge one of the users to a game of trying to read Japanese sentences.
+                When the challenge has been accepted, both players try to correctly read the same sequence of
+                sentences. The user guesses the reading
+                by typing in the reading in either alphabet characters or Japanese characters, and is then shown the
+                next sentence.
+                At the end, the player with the largest amount of correct readings wins, if that's the same the
+                fastest player wins.
+                This is all accomplished using Spring Boot websocket connections combined with StompJS.
+            </p>
+            <p>
+                <i>Under construction</i>
+            </p>
+        </div>
+        <div class="col-md-8">
+  
+        </div>
+    </div>
+  
+    <div class="sub-title">Some skills that I got to apply with this project</div>
+    <div id="programming-languages">
+        <img src="./assets/images/programming-languages/c-sharp-logo.png">
+        <img src="./assets/images/programming-languages/java-logo.png">
+        <img src="./assets/images/programming-languages/javascript-logo.png">
+        <img src="./assets/images/programming-languages/css-logo.png">
+        <img src="./assets/images/programming-languages/html-logo.png">
+        <img src="./assets/images/programming-languages/typescript-logo.png">
+        <img src="./assets/images/programming-languages/mysql-logo.png">
+        <img src="./assets/images/programming-languages/sql-server-logo.png">
+        <div>
+        </div>
