added bootstrap menu bar

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,6 @@
-<div id="upper-bar">
-    <div id="right-name">Yori Garcia Rosario - Software Engineer</div>
+<app-menu></app-menu>
+<!--<div id="upper-bar">
+    
     <div id="menu-link-group">
         <div>About me</div>
         <div>Kanji Shoubu</div>
@@ -19,7 +20,7 @@
         </li>
   
     </ul>
-  </div>
+  </div>-->
   <div id="content" class="container">
     <div class="row">
         <div class="col-md-9">
