--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -5,6 +5,14 @@ body{
     background-color: #BFDBF7 !important;
 }
 
+.technology {
+    height: 5% !important; 
+    width: 5% !important;
+    float: right;
+    display: inline-block;
+    vertical-align: unset;
+}
+
 #menu-link-group{
     float: left;
     margin-left: 5px;
@@ -42,8 +50,8 @@ body{
 
 @media screen and (max-width: 820px) {
     #picture{
-        height: 150px;
-        width: 150px;
+        height: 240px;
+        width: 240px;
     }
 }
 
@@ -66,11 +74,13 @@ body{
 
 .sub-title{
     margin-top: 15px;
-    font-size: 150%;
+    font-size: 180%;
     color: #053C5E;
     font-family: 'Righteous', cursive;
 }
 
-#programming-languages > img{
-    margin: 7px;
+.project-description {
+    font-size: 130%;
+    color: #053C5E;
+    font-family: 'Righteous', cursive;
 }
