--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,29 +1,8 @@
 <app-menu></app-menu>
-<!--<div id="upper-bar">
-    
-    <div id="menu-link-group">
-        <div>About me</div>
-        <div>Kanji Shoubu</div>
-        <div>Attack Defend</div>
-    </div>
-    <ul id="logo-list">
-        <li>
-            <a target="_blank" href="https://github.com/Yori1">
-                <img id="github-logo" class="logo" src="./assets/images/github-logo.png">
-            </a>
-        </li>
-        <li>
-            <a target="_blank" href="https://www.linkedin.com/in/yori-garcia-rosario-b5021b135/">
-                <img id="linkedin-logo" class="logo" src="./assets/images/linkedin-logo.png">
-            </a>
-  
-        </li>
-  
-    </ul>
-  </div>-->
-  <div id="content" class="container">
+
+<div id="content" class="container">
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-md-8">
             <div class="header">Hey, I'm Yori</div>
             <div id="introduction">
                 <p>
@@ -33,54 +12,35 @@
                     Smart Mobile.
                 </p>
                 <p>
-                    I'm very passionate about building software that the user wants, and I'm always
-                    trying to follow the newest best coding practices. I have experience making desktop
-                    applications, webapplications (both frontend and backend), mobile applications and JSON APIs.
-                </p>
-                <p>
-                    When I'm not working on software, I like playing video games, exercising or learning Japanese.
+                    I'm passionate about building software, it's important to me that I'm improving every day. I like
+                    working on sideprojects,
+                    and on this website you can see some of the ones I have built myself that I think deserve a
+                    spotlight.
                 </p>
             </div>
-  
+
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
             <img id="picture" src="./assets/images/picture.png" />
         </div>
     </div>
-    <div class="separator"></div>
-    <div class="row">
-        <div class="col-md-4">
-            <div class="sub-title">Kanji Shoubu</div>
-            <p>
-                Kanji Shoubu is a webapp built with Spring Boot and MySQL. It's an application that allows logged in
-                users to view a list
-                of all online users, and challenge one of the users to a game of trying to read Japanese sentences.
-                When the challenge has been accepted, both players try to correctly read the same sequence of
-                sentences. The user guesses the reading
-                by typing in the reading in either alphabet characters or Japanese characters, and is then shown the
-                next sentence.
-                At the end, the player with the largest amount of correct readings wins, if that's the same the
-                fastest player wins.
-                This is all accomplished using Spring Boot websocket connections combined with StompJS.
-            </p>
-            <p>
-                <i>Under construction</i>
-            </p>
-        </div>
-        <div class="col-md-8">
-  
+    <div *ngFor="let project of projects">
+        <div class="separator"></div>
+                <div class="sub-title">{{ project.name }}</div>
+                <div style="float: right">
+                        <div   *ngFor="let technology of project.technologies">
+                                <img class="technology" src={{technology.imgUrl}}/>
+                </div>
+                </div>
+
+        <div class="row">
+            <div class="project-description col-md">
+                <p>
+                    {{ project.description }}
+                </p>
+            </div>
+            <div class="col-md-2">
+
+            </div>
         </div>
     </div>
-  
-    <div class="sub-title">Some skills that I got to apply with this project</div>
-    <div id="programming-languages">
-        <img src="./assets/images/programming-languages/c-sharp-logo.png">
-        <img src="./assets/images/programming-languages/java-logo.png">
-        <img src="./assets/images/programming-languages/javascript-logo.png">
-        <img src="./assets/images/programming-languages/css-logo.png">
-        <img src="./assets/images/programming-languages/html-logo.png">
-        <img src="./assets/images/programming-languages/typescript-logo.png">
-        <img src="./assets/images/programming-languages/mysql-logo.png">
-        <img src="./assets/images/programming-languages/sql-server-logo.png">
-        <div>
-        </div>
