--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -13,3 +13,26 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 </nav>
+
+<!--<div id="upper-bar">
+    
+    <div id="menu-link-group">
+        <div>About me</div>
+        <div>Kanji Shoubu</div>
+        <div>Attack Defend</div>
+    </div>
+    <ul id="logo-list">
+        <li>
+            <a target="_blank" href="https://github.com/Yori1">
+                <img id="github-logo" class="logo" src="./assets/images/github-logo.png">
+            </a>
+        </li>
+        <li>
+            <a target="_blank" href="https://www.linkedin.com/in/yori-garcia-rosario-b5021b135/">
+                <img id="linkedin-logo" class="logo" src="./assets/images/linkedin-logo.png">
+            </a>
+  
+        </li>
+  
+    </ul>
+  </div>-->
