--- a/src/app/shared/menu/menu.component.css
+++ b/src/app/shared/menu/menu.component.css
@@ -1,8 +1,29 @@
 #menu{
     background-color: #053C5E;
     margin-bottom: 10px;
+
+
 }
 
-.brown{
+.navbar-brand {
+    font-size: 1.4em;
     color:#D8B4A0 !important;
+}
+
+.nav-link {
+    color:#D8B4A0 !important;
+    font-size: 1.4em;
+    margin: 0.1em;
+    
+}
+
+
+
+.brown{
+}
+
+@media only screen and (min-width: 993px) {
+    .nav-link {
+        float: left;
+    }
 }
