--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -8,7 +8,7 @@
       </li>
     </ul>
   </div>
-  <a class="navbar-brand brown" href="#">Yori Garcia Rosario, Software Engineer</a>
+  <a class="navbar-brand brown" href="#">Yori Garcia Rosario</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
