--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,8 +20,24 @@
             </div>
 
         </div>
-        <div class="col-md-3">
-            <img id="picture" src="./assets/images/picture.jpg" />
+        <div class="col-md-2">
+        <div class="row">
+        <img id="picture" class="img-fluid" src="./assets/images/picture.jpg" /> 
+                    
+        </div>
+        <div class="row">
+        <div class="col-md-6">
+        <a href="https://github.com/Yori1">
+        <img class="img-fluid" src="./assets/images/github-logo.png">
+        </a>
+        </div>
+                <div class="col-md-6">
+                <a href="https://www.linkedin.com/in/yori-garcia-rosario-b5021b135/">
+                        <img class="img-fluid" src="./assets/images/linkedin-logo.png">
+                </a>
+        </div>
+        </div>
+
         </div>
     </div>
     <div class="separator"></div>
@@ -61,7 +77,6 @@
     <div class="sub-title">Some skills that I got to apply with this project</div>
     <div id="programming-languages">
         <img src="./assets/images/programming-languages/c-sharp-logo.png">
-        <img src="./assets/images/programming-languages/java-logo.png">
         <img src="./assets/images/programming-languages/javascript-logo.png">
         <img src="./assets/images/programming-languages/css-logo.png">
         <img src="./assets/images/programming-languages/html-logo.png">
